# spiral_of_silence_abm

./: .gitignore  CMakeLists.txt  README.md
models/: bot_influence_by_attachment.json  ejis_paper_example.gml  small_jbe_paper_example.gml  vary_m_gamma_wo_bots.json  vary_sbm_by_inter_cluster_density.json
models/tests/: ejis_paper_example_undirected.gml  example_param_space.json  example_param_space_template_expr.json  example_template_expr.json  graphIo1.gml
scripts/: common_plots.R  prepare_csv_data.R
src/: cliHelpers.cpp  cliHelpers.h  main_computeDegreeDists.cpp  main_extendedSimulation.cpp  main_generation.cpp  main_paramSimulation.cpp  main_simulation.cpp
src/exceptions/: argumentException.h  cannotWriteException.h  exception.h  formatException.h  internalException.h  notImplementedException.h
src/generation/: botAdding.cpp  botAdding.h  erdoesRenyi.cpp  erdoesRenyi.h  generalStochasticBlockModel.cpp  generalStochasticBlockModel.h  generation.cpp  generation.h  generationParams.cpp  generationParams.h  graphGeneration.cpp  graphGeneration.h  helpers.cpp  helpers.h  iterativeAttachment.cpp  preferentialAttachment.cpp  preferentialAttachment.h  stochasticBlockModel.cpp  stochasticBlockModel.h
src/generation/configurationModel/: configurationModel.hpp  main_configurationModel.cpp
src/generation/erdoesRenyi/: erdoesRenyi.hpp  main_erdoesRenyi.cpp
src/generation/forestFire/: forestFire.hpp  main_forestFire.cpp
src/generation/iterativeAttachment/: inversePreferentialAttachment.cpp  inversePreferentialAttachment.h  preferentialAttachment.cpp  preferentialAttachment.h  uniformAttachment.cpp  uniformAttachment.h
src/generation/preferentialAttachment/: main_preferentialAttachment.cpp  preferentialAttachment.hpp
src/generation/stochasticBlockModel/: stochasticBlockModel.hpp
src/generation/tests/: testGenerate.cpp  testGenerationParams.cpp  testHelpers.cpp
src/graph/: graph.cpp  graph.h  graphHelper.cpp  graphHelper.h
src/graph/io/: readFromGml.cpp  readFromGml.h  writeToGml.cpp  writeToGml.h
src/graph/tests/: testGmlReading.cpp  testGmlWriting.cpp  testGraphIo.cpp
src/model/: model.cpp  model.h  modelProperties.cpp  modelProperties.hpp  modelToGraphviz.cpp  modelToGraphviz.h  performOneStep.cpp  performOneStep.h
src/model/tests/: testModel.cpp  testModelIo.cpp  testPerformOneStep.cpp
src/simulation/: performOneStep.cpp  performOneStep.h  simulateUntilStable.cpp  simulateUntilStable.h  writeSimulationResultsToCsv.cpp  writeSimulationResultsToCsv.h
src/simulation/tests/: testPerformOneStep.cpp
src/tests/: main_tests.cpp  test_helpers.hpp
